# Game-Server-Manager

./: .bump-version  .env.example  Dockerfile  Pipfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  start_server.sh  test_manager_request.sh  update_deps.sh
.github/workflows/: docker-image.yml
app/: main.py
