[project]
name = "game-server-manager"
version = "v0.4.6"
requires-python = ">=3.13"
dependencies = [
    "docker",
    "fastapi[standard]",
    "semantic-version",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
